# Seq2Karyotype

./: README.md  requirements.txt  setup.cfg
S2K/: Chromosome.py  Consts.py  Distribution.py  Genome.py  Models.py  Report.py  Run.py  S2K.ini  Scoring.py  Segment.py  Testing.py  WGS.py  __main__.py
S2K/viewer/: Plots.py  app.py
