[metadata]
name = Seq2Karyotype
description = Analysis of copy number profile and karyotyping in WGS
author = Limeng Pu, Karol Szlachta, Dennis Kennetz
license = Apache2.0
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    S2K
install_requires =
    numpy>=1.17.1
    pandas>=1.1.5
    scipy>=1.3.1
    scikit-learn>=0.20.0
    matplotlib>=3.0.0
    shiny>=0.2.7
    jinja2>=3.1.2
python_requires = >= 3.7
package_dir =
    =.
zip_safe = no
url = https://github.com/chenlab-sj/Seq2Karyotype

[options.extras_require]
testing =
    pytest>=7.0.1
    pytest-cov>=4.0.0
    tox>=3.26.0

[options.package_data]
S2K =
    S2K.ini
    viewer/*

[options.entry_points]
console_scripts =
    s2k = S2K.__main__:main
